# petsc4foam

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
part/draft/classifier/: image.py  preprocess.py  train.py
part/hyper-parameter-optimization/data-labeling/: main.py
part/hyper-parameter-optimization/training-dataset/data_labeling/: main.py  metrics.tsv
part/hyper-parameter-optimization/training-dataset/data_labeling/src/: CMakeLists.txt  Makefile  test4solve.c  txt2bin.c  util.h
part/hyper-parameter-optimization/training-dataset/static/: metrics.7z
part/hyper-parameter-optimization/training-dataset/suite_sparse/: __init__.py  __main__.py  config.py  core.py  type.py  util.py
part/installation-of-petsc4foam/: petsc4foam.dockerfile
part/openfoamcom-or-openfoamorg/: Makefile
part/openfoamcom-or-openfoamorg/script/: analysis.py  download.py  plot.py
part/openfoamcom-or-openfoamorg/static/: differs.json  openfoam.json
part/test-for-petsc4foam/: petsc4foam.tsv
part/test-for-petsc4foam/default/: filter.py  main.py  petsc4foam.tsv
part/test-for-petsc4foam/tuning/: main.py
part/test-for-petsc4foam/tuning/mixerVessel2D/: data.json
part/test-for-petsc4foam/tuning/mixerVessel2D/original/: Allclean  Allrun
part/test-for-petsc4foam/tuning/mixerVessel2D/original/0.orig/: T  U  alpha.air  alpha.mercury  alpha.oil  alpha.water  p_rgh
part/test-for-petsc4foam/tuning/mixerVessel2D/original/constant/: MRFProperties  g  transportProperties  turbulenceProperties
part/test-for-petsc4foam/tuning/mixerVessel2D/original/system/: controlDict  fvSchemes  fvSolution  setFieldsDict  topoSetDict
part/test-for-petsc4foam/tuning/mixerVessel2D/patch/petsc-default/system/: controlDict  fvSolution
part/test-for-petsc4foam/tuning/mixerVessel2D/patch/petsc-tuning/system/: fvSolution
